// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrimaryButton should render correctly 1`] = `
.iHFOYc {
  border: 2px solid palevioletred;
  background-color: transparent;
  color: palevioletred;
  padding: 10px;
  border-radius: 4px;
  cursor: pointer;
  -webkit-transition: 300ms all;
  transition: 300ms all;
  font-size: 16px;
}

.iHFOYc:hover {
  background-color: palevioletred;
  color: white;
}

<button
  className="sc-bdVaJa iHFOYc"
>
  I'am a button
</button>
`;

exports[`SecondaryButton should render correctly 1`] = `
.iePwPj {
  border: 2px solid palevioletred;
  background-color: transparent;
  color: palevioletred;
  padding: 10px;
  border-radius: 4px;
  cursor: pointer;
  -webkit-transition: 300ms all;
  transition: 300ms all;
  font-size: 16px;
  background-color: palevioletred;
  color: white;
}

.iePwPj:hover {
  background-color: palevioletred;
  color: white;
}

.iePwPj:hover {
  background-color: transparent;
  color: palevioletred;
}

<button
  className="sc-bwzfXH iePwPj"
>
  I'am a button
</button>
`;
